// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render SearchBlog component correctly 1`] = `
<DocumentFragment>
  <div
    class="search content-container"
  >
    <div
      class="content-container"
    >
      <form
        class="search__form"
        data-testid="form"
      >
        <input
          class="search__form_input"
          data-testid="search_input"
          maxlength="100"
          placeholder="Search..."
          type="text"
          value=""
        />
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render SearchBlog component with search value filter correctly 1`] = `
<DocumentFragment>
  <div
    class="search content-container"
  >
    <div
      class="content-container"
    >
      <form
        class="search__form"
        data-testid="form"
      >
        <input
          class="search__form_input"
          data-testid="search_input"
          maxlength="100"
          placeholder="Search..."
          type="text"
          value="React"
        />
      </form>
      <p
        class="search__result"
      >
        Result of: 
        <b
          class="search__resultvalue"
        >
          React
        </b>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
